# vjepa-forge

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  rfdetr  src
app/: __init__.py  vjepa_2_1
scripts/: download_coco_det.sh  download_cuhk_avenue.sh  download_imagenet_vid.sh  download_ucsd_ped2.sh  download_vjepa_weights.sh
tests/: test_anomaly.py  test_backbones.py  test_cli_and_config.py  test_detection.py  test_export_and_convert.py  test_forge_data.py  test_segmentation_heads.py  test_training_runtime.py
tests/upstream_tests/: test_vjepa_anomaly.py  test_vjepa_tune.py
vjepa_forge/: __init__.py
vjepa_forge/backbones/: __init__.py  factory.py  vjepa21.py
vjepa_forge/cfg/: __init__.py  default.yaml  loader.py
vjepa_forge/cli/: __init__.py  benchmark.py  common.py  export.py  main.py  predict.py  train.py  val.py
vjepa_forge/configs/: __init__.py  defaults.yaml  loader.py
vjepa_forge/data/: __init__.py  anomaly_dataset.py  batching.py  cache.py  detection_dataset.py  feature_cache_runtime.py  image.py  image_dataset.py  segmentation_dataset.py  transforms.py  video.py  video_dataset.py
vjepa_forge/engine/: __init__.py  callbacks.py  checkpointing.py  distributed.py  evaluator.py  exporter.py  inference.py  model.py  optimization.py  predictor.py  rf_detr_trainer.py  runtime.py  trainer.py  validator.py
vjepa_forge/export/: __init__.py  onnx.py
vjepa_forge/heads/: __init__.py
vjepa_forge/losses/: __init__.py  anomaly.py  classification.py  common.py
vjepa_forge/masks/: __init__.py
vjepa_forge/metrics/: __init__.py  (+4 more)
(+108 files in other folders)
